@@ -11,27 +11,47 @@ public class ReportResult {
 
         int[] answer = new int[id_list.length];
 
-        HashMap<String, ArrayList<String>> users = new HashMap<>();
-        HashMap<String, Integer> reported = new HashMap<>();
+        HashMap<String, ArrayList<String>> hashMap = new HashMap<>();
+        HashMap<String, ArrayList<String>> reported = new HashMap<>();
+        HashMap<String, Integer> reportedCnt = new HashMap<>();
+        String user, reportedUser;
 
         // 중복 신고 제거
         for (int i = 0; i < report.length; i++) {
             String[] splited = report[i].split(" ");
-            users.put(report[i], new ArrayList<String>(List.of(splited)));
+            hashMap.put(report[i], new ArrayList<String>(Arrays.asList(splited)));
         }
+        // 신고 회원 테이블 초기화 및 신고 횟수 계산
+        for (String key:hashMap.keySet()) {
+            user = hashMap.get(key).get(0);
+            reportedUser = hashMap.get(key).get(1);
 
-        for (String key : users.keySet()) {
-            String reportedUser = users.get(key).get(1);
-            if (reported.containsKey(reportedUser)) {
-                reported.put(reportedUser, reported.get(reportedUser) + 1);
+            if (reported.containsKey(user)) {
+                reported.get(user).add(reportedUser);
             } else {
-                reported.put(reportedUser, 1);
+                reported.put(user, new ArrayList<>(Arrays.asList(reportedUser)));
+            }
+
+            if (reportedCnt.containsKey(reportedUser)) {
+                reportedCnt.put(reportedUser, reportedCnt.get(reportedUser) + 1);
+            } else {
+                reportedCnt.put(reportedUser, 1);
             }
         }
 
-        System.out.println(reported);
-
-        return null;
+        // 신고된 회원 수
+        for (int i = 0; i < id_list.length; i++) {
+           if (reported.containsKey(id_list[i])) {
+               ArrayList<String> reportedUsers = new ArrayList<>();
+               reportedUsers = reported.get(id_list[i]);
+               for (int j = 0; j < reportedUsers.size(); j++) {
+                   if (reportedCnt.get(reportedUsers.get(j)) >= k) {
+                       answer[i] += 1;
+                   }
+               }
+           }
+        }
+        return answer;
     }
 
     public static void main(String[] args) {
@@ -43,6 +63,5 @@ public class ReportResult {
 
         ReportResult reportResult = new ReportResult();
         reportResult.solution(id_list, report, 2);
-
     }
 }
